--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: Run Python Script
 on:
   schedule:
     - cron: "*/5 * * * *"  # Запуск каждые 5 минут
+  workflow_dispatch:  # Позволяет запускать вручную
+
 
 jobs:
   run-script:
