--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
     - cron: "*/5 * * * *"  # Запуск каждые 5 минут
   workflow_dispatch:  # Позволяет запускать вручную
 
-
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -18,5 +17,10 @@ jobs:
         with:
           python-version: '3.9'
 
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install requests beautifulsoup4 lxml
+
       - name: Run script
-        run: python main.py 
+        run: python main.py
