--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: Run Python Script
 
 on:
   schedule:
-    - cron: "*/5 * * * *"  # Запуск каждые 5 минут
-  workflow_dispatch:  # Позволяет запускать вручную
-
+    - cron: "*/10 * * * *"  
+  workflow_dispatch: 
 jobs:
   run-script:
     runs-on: ubuntu-latest
