--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install requests beautifulsoup4 lxml
+      - name: Ensure directory exists
+        run: mkdir -p $(dirname csv/all_ad.csv)
 
       - name: Run script
         run: python main.py
