--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,15 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install requests beautifulsoup4 lxml
+
       - name: Ensure directory exists
         run: mkdir -p $(dirname csv/all_ad.csv)
+
+      - name: Check file write permissions
+        run: |
+          touch csv/all_ad.csv
+          echo "Write test" >> csv/all_ad.csv
+          cat csv/all_ad.csv
 
       - name: Run script
         run: python main.py
