--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,19 @@ name: Run Python Script
 on:
   schedule:
     - cron: "*/10 * * * *"  
-  workflow_dispatch: 
+  workflow_dispatch:
+
+permissions:
+  contents: write
+
 jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          persist-credentials: true
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -32,3 +38,11 @@ jobs:
 
       - name: Run script
         run: python main.py
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add csv/all_ad.csv
+          git commit -m "Update CSV file with new ads" || echo "No changes to commit"
+          git push
