--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TELEGRAM_BOT_TOKEN=7671661460:AAEgXiI9BPog71alJsZUnvr3_u-exeiX4fE
-TELEGRAM_CHAT_ID_OLEKSANDR=1185615987
-RAILWAY_PUBLIC_DOMAIN=olxparserbot-production.up.railway.app
+TELEGRAM_BOT_TOKEN=....
+TELEGRAM_CHAT_ID_OLEKSANDR=.....
+RAILWAY_PUBLIC_DOMAIN=.....
